--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@nextui-org/react": "^2.6.11",
     "@react-aria/visually-hidden": "3.8.22",
     "@react-types/shared": "3.29.0",
+    "@types/axios": "^0.14.4",
+    "axios": "^1.9.0",
     "clsx": "2.1.1",
+    "dotenv": "^16.5.0",
     "framer-motion": "11.15.0",
     "geist": "^1.4.1",
     "react": "18.3.1",
